--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "boostrap": "^2.0.0",
+    "bootstrap": "^4.2.1",
     "core-js": "^2.4.1",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.6",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
